# camera-manager

./: .gitignore  .gitmodules  .mailmap  .organizationmap  .travis.yml  CMakeLists.txt  Makefile.am  README.md  ardupilot-camera-stream.conf  avahi_publisher.cpp  avahi_publisher.h  camera-streaming-daemon  camera-streaming-daemon.service.in  camera_client_main.cpp  configure.ac  csd.service.in  dronecode-camera-manager.service.in  glib_mainloop.cpp  glib_mainloop.h  gstreamer_pipeline_builder.cpp  gstreamer_pipeline_builder.h  log.c  log.h  macro.h  main.cpp  mainloop.cpp  mainloop.h  my_config_gazebo.conf  rtsp_server.cpp  rtsp_server.h  stream.cpp  stream.h  stream.py  stream_manager.cpp  stream_manager.h  stream_v4l2.cpp  stream_v4l2.h  v4l2_defines.py  valgrind.supp  video-streaming.xml
a/: main.conf
cmake/: FindAvahi.cmake  FindRealSense.cmake  FindRealSense2.cmake
plugins/GazeboCamera/: CameraDeviceGazebo.cpp  CameraDeviceGazebo.h  PluginGazebo.cpp  PluginGazebo.h
plugins/RealSenseCamera/: CameraDeviceRealSense.cpp  CameraDeviceRealSense.h  PluginRealSense.cpp  PluginRealSense.h
plugins/V4l2Camera/: CameraDeviceV4l2.cpp  CameraDeviceV4l2.h  PluginV4l2.cpp  PluginV4l2.h  v4l2_interface.cpp  v4l2_interface.h
samples/: Makefile.am  config.sample  main_sample_camparams_client.cpp  main_sample_client.cpp  main_sample_custom.cpp  main_sample_mavlink_client.cpp  main_sample_realsense.cpp  stream_builder_custom.cpp  stream_builder_custom.h  stream_builder_realsense.cpp  stream_builder_realsense.h  stream_custom.cpp  stream_custom.h  stream_realsense.cpp  stream_realsense.h
samples/config/: config.sample  gazebo.conf  picam.conf  ubuntu.conf
samples/config_files/: config_aero.conf  config_ubuntu.conf
samples/def/: camera-def-gazebo.xml  camera-def-picam.xml  camera-def-uvc.xml
samples/files/: aero.conf  gazebo.conf  ubuntu.conf
src/: CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  CameraComponent_V4L2.cpp  CameraComponent_V4L2.h  CameraDevice.h  CameraDeviceGazebo.cpp  CameraDeviceGazebo.h  CameraDeviceV4l2.cpp  CameraDeviceV4l2.h  CameraDevice_V4L2.cpp  CameraDevice_V4L2.h  CameraParameters.cpp  CameraParameters.h  CameraServer.cpp  CameraServer.h  ImageCapture.h  ImageCaptureGst.cpp  ImageCaptureGst.h  PluginBase.h  PluginManager.cpp  PluginManager.h  VideoCapture.h  VideoCaptureGst.cpp  VideoCaptureGst.h  VideoStream.h  VideoStreamRtsp.cpp  VideoStreamRtsp.h  VideoStreamUdp.cpp  VideoStreamUdp.h  avahi_publisher.cpp  avahi_publisher.h  conf.cpp  conf.h  conf_file.cpp  conf_file.h  glib_mainloop.cpp  glib_mainloop.h  gstreamer_pipeline_builder.cpp  gstreamer_pipeline_builder.h  (+39 more)
src/Plugins/AeroAtomIspCamera/: CMakeLists.txt  CameraDeviceAeroAtomIsp.cpp  CameraDeviceAeroAtomIsp.h  PluginAeroAtomIsp.cpp  PluginAeroAtomIsp.h
src/Plugins/CustomCamera/: CMakeLists.txt  CameraDeviceCustom.cpp  CameraDeviceCustom.h  PluginCustom.cpp  PluginCustom.h
src/Plugins/GazeboCamera/: CMakeLists.txt  PluginGazebo.cpp  PluginGazebo.h
src/Plugins/RealSenseCamera/: CMakeLists.txt  CameraDeviceRealSense.cpp  PluginRealSense.cpp
src/Plugins/V4l2Camera/: CMakeLists.txt  PluginV4l2.cpp  PluginV4l2.h
test/: CMakeLists.txt  export_to_xml.cpp  stream_builder_custom.cpp  stream_builder_custom.h  stream_custom.cpp  test_camera_parameters.cpp  test_mavlink_protocol.cpp  test_rtsp_udp_stream_discovery.cpp
tools/export_v4l2_param_xml/: Makefile  export_v4l2_param_xml.cpp
